--- a/exercice1.html
+++ b/exercice1.html
@@ -8,8 +8,11 @@
 
     <div id="viewport">
         <ul id="listeCourse">
-
         </ul>
+        <input type="text" name="" id="input">
+        <button type="submit" id="add">add</button>
+        <button type="submit" id="del">del</button>
+    </div>
     </div>
 
     <script type="text/javascript" src="exercice1.js"></script>
