--- a/exercice1.html
+++ b/exercice1.html
@@ -6,15 +6,16 @@
 </head>
 <body>
 
-    <div id="viewport">
-        <ul id="listeCourse">
-        </ul>
-        <input type="text" name="" id="input">
-        <button type="submit" id="add">add</button>
-        <button type="submit" id="del">del</button>
-    </div>
-    </div>
+<div id="viewport">
+    <input id="item" type="text" placeholder="Votre item">
+    <input id="send" type="submit" placeholder="SEND">
+    <input id="del" type="submit" name="SUPP">
 
-    <script type="text/javascript" src="exercice1.js"></script>
+    <ul id="listeCourse">
+        <p id="crete"></p>
+    </ul>
+</div>
+
+<script type="text/javascript" src="exercice1.js"></script>
 </body>
 </html>
